Fixing what looked like a breadcrumb wrap issue.

--- a/openrural/static/less/style.less
+++ b/openrural/static/less/style.less
@@ -233,11 +233,11 @@ ul.paginate-newsitems {
 
 ul#nav-breadcrumb, #nav-breadcrumb {
 	padding: 0;
-	margin: 0;
+	margin: 0 0 10px 0;
 	float: none;
 	display: block;
 	background: none transparent;
-	font-size: 15px;
+	font-size: 13px;
 	li {
 		float: left;
 		background-color: none;
